    of a join in place of the "of_type()" modifier.
    [ticket:2333]

  - [feature] The of_type() construct on attributes
    now accepts aliased() class constructs as well
    as with_polymorphic constructs, and works with
    query.join(), any(), has(), and also
    eager loaders subqueryload(), joinedload(),
    contains_eager()
    [ticket:2438] [ticket:1106]

  - [feature] The "deferred declarative
    reflection" system has been moved into the
    declarative extension itself, using the
    new DeferredReflection class.  This
    class is now tested with both single
    and joined table inheritance use cases.
    [ticket:2485]

  - [feature] Added new core function "inspect()",
    which serves as a generic gateway to
    introspection into mappers, objects,
    others.   The Mapper and InstanceState
    objects have been enhanced with a public
    API that allows inspection of mapped
    attributes, including filters for column-bound
    or relationship-bound properties, inspection
    of current object state, history of
    attributes, etc.  [ticket:2208]

  - [feature] Calling rollback() within a
    session.begin_nested() will now only expire
    those objects that had net changes within the
    scope of that transaction, that is objects which
    were dirty or were modified on a flush.  This
    allows the typical use case for begin_nested(),
    that of altering a small subset of objects, to
    leave in place the data from the larger enclosing
    set of objects that weren't modified in
    that sub-transaction.  [ticket:2452]

  - [feature] Added utility feature
    Session.enable_relationship_loading(),
    supersedes relationship.load_on_pending.
    Both features should be avoided, however.
    [ticket:2372]

  - [bug] The "passive" flag on Session.is_modified()
    no longer has any effect. is_modified() in
    all cases looks only at local in-memory
    modified flags and will not emit any
    SQL or invoke loader callables/initializers.